<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Machine Helper</string>
    <string name="app_packageName">top.fuqingchen.machinedesign</string>
    <string name="app_addresses">fuqingchen.gov@gmail.com</string>
    <string name="app_subject">Android:【Machine Helper】</string>
    <string name="app_Recommend">推荐</string>
    <string name="app_delete">全部清除</string>
    <string name="app_share">分享结果</string>
    <string name="app_copy">复制结果</string>
    <string name="app_doc">说明文档</string>
    <string name="app_safe">安全</string>
    <string name="app_unsafe">不安全</string>
    <string name="app_unWrite">没写→_→</string>
    <string name="app_coming_soon">尽请期待</string>
    <string name="app_finish">完成</string>
    <string name="app_input_error">输入错误(;¬_¬)</string>
    <string name="guide_welcome">欢迎使用(°∀°)ﾉ</string>
    <string name="guide_intro">这里有几点需要你了解一下</string>
    <string name="guide_intro_1">本程序仅供学习参考，请勿应用于工程实际中</string>
    <string name="guide_intro_2">本程序为免费无广告应用</string>
    <string name="guide_intro_3">在「计算」板块，点击“计算结果”即可复制</string>
    <string name="guide_message">点框以示阅读(´･_･`)</string>
    <string name="guide_OK">OK（￣▽￣）</string>
    <string name="copy_done">复制好了(=・ω・=)</string>
    <string name="copy_false">你算都没算就叫我复制(-_-#)</string>
    <string name="copyright">Developed by Fu_Qingchen in China.</string>
    <string name="main_Design">设计</string>
    <string name="main_Calculation">计算</string>
    <string name="main_Info">信息</string>
    <string name="developer_name">Fu_Qingchen</string>
    <string name="design_Limits">公差</string>
    <string name="design_Gear">齿轮</string>
    <string name="design_FlatKey">平键</string>
    <string name="design_Bearing">轴承</string>
    <string name="design_top">上偏差</string>
    <string name="design_button">下偏差</string>
    <string name="limits_D">公称尺寸</string>
    <string name="limits_GongCha">基本偏差代号</string>
    <string name="limits_IT">标准公差等级</string>
    <string name="limits_GB">(GB/T 1800.1—2009)</string>
    <string name="calculation_Interpolation">线性插值</string>
    <string name="calculation_Differentiation">数值微分</string>
    <string name="calculation_Integration">数值积分</string>
    <string name="calculation_Matrix">方程求解</string>
    <string name="info_Settings">设置</string>
    <string name="info_Web">国标</string>
    <string name="info_Web_intro">注：强制性国家标准(GB)，非采标可在线阅读和下载，采标只可在线阅读；推荐性国家标准(GB/T)，非采标可在线阅读，采标只提供标准题录信息</string>
    <string name="Web_GB688">国家标准全文公开系统</string>
    <string name="Web_GB688_web">http://www.gb688.cn/bzgk/gb/index</string>
    <string name="Web_GB688_help">国家标准全文公开系统说明</string>
    <string name="Web_GB688_help_web">http://www.gb688.cn/bzgk/gb/help</string>
    <string name="Web_copy">复制网址</string>
    <string name="info_About">关于</string>
    <string name="info_Support">支持</string>
    <string name="settings_Language">语言</string>
    <string name="settings_Theme">夜间模式</string>
    <string name="language_English">English</string>
    <string name="language_Chinese">中文</string>
    <string name="language_Follow_System">跟随系统</string>
    <string name="Theme_On">开启</string>
    <string name="Theme_Off">关闭</string>
    <string name="Theme_Automatic">自动(日落时开启)</string>
    <string name="about_intro">用于辅助机械设计计算的计算器</string>
    <string name="about_Contact_Feedback">联系与反馈</string>
    <string name="contact_Rate">评分</string>
    <string name="contact_Intro">如果你喜欢这个应用，欢迎和我联系</string>
    <string name="contact_Contact">联系(微博)</string>
    <string name="contact_Feedback">反馈(E-mail)</string>
    <string name="contact_My_Website">我的网站</string>
    <string name="development_code">源代码(Github)</string>
    <string name="about_Development_Related">开发相关</string>
    <string name="development_Components">使用到的开源组件</string>
    <string name="state_main">"       本程序为免费无广告应用，如你是在别处花了钱或发现应用内有广告，那么你已上当或使用了盗版。该应用的官方渠道为Github，欢迎转载推荐~"</string>
    <string name="about_State">申明</string>
    <string name="support_Red_Envelope">领取红包支持</string>
    <string name="redEnvelope_intro">"领取支付宝邀请红包支持开发者 "</string>
    <string name="support_Donations">捐赠支持</string>
    <string name="donations_intro">请开发者喝一杯快乐水</string>
    <string name="donations_alipay">支付宝</string>
    <string name="donation_wachat">微信</string>
    <string name="donation_QQ">QQ</string>
    <string name="donation_thanks">感谢你的支持</string>
    <string name="support_intro">如果你喜欢本应用，并想让本应用一直活下去，欢迎捐赠！你们的支持将是我一直更新下去的动力~</string>
    <string name="vbelt_KA">工况系数KA</string>
    <string name="vbelt_P">输入功率P</string>
    <string name="vbelt_n1">输入转速n1</string>
    <string name="vbelt_n2">输出转速n2</string>
    <string name="vbelt_Pc">计算功率Pc</string>
    <string name="vbelt_type">带轮型号</string>
    <string name="vbelt_d1">小轮直径d1</string>
    <string name="vbelt_v">带轮速度v</string>
    <string name="vbelt_d2">大轮直径d2</string>
    <string name="vbelt_delta">从动轮转速误差</string>
    <string name="vbelt_a0">初定中心距a0</string>
    <string name="vbelt_L">基准带长(初算带长)</string>
    <string name="vbelt_a">确定中心距a</string>
    <string name="vbelt_amin">中心距最小值</string>
    <string name="vbelt_amax">中心距最大值</string>
    <string name="vbelt_alpha">包角α</string>
    <string name="vbelt_i">实际传动比i</string>
    <string name="vbelt_z">V 带根数z</string>
    <string name="vbelt_F0">初拉力F0</string>
    <string name="vbelt_FQ">带对轴拉力FQ</string>
    <string name="gear_hardness">齿面硬度</string>
    <string name="gear_hard">全为硬齿面</string>
    <string name="gear_soft">其中一个为软齿面</string>
    <string name="gear_sigmaFP1">小齿轮许用弯曲应力σFP1</string>
    <string name="gear_sigmaFP2">大齿轮许用弯曲应力σFP2</string>
    <string name="gear_sigmaHP">齿面许用接触应力σHP</string>
    <string name="gear_T1">小齿轮转矩T1</string>
    <string name="gear_T2">大齿轮转矩T2</string>
    <string name="gear_psi_d">齿宽系数ψd</string>
    <string name="gear_i">传动比i</string>
    <string name="gear_beta0">初定螺旋角β0(°)</string>
    <string name="gear_KA">使用系数KA</string>
    <string name="gear_Kv">动载系数Kv</string>
    <string name="gear_K_beta">齿向载荷分布系数Kβ</string>
    <string name="gear_K_alpha">齿间载荷分配系数Kα</string>
    <string name="gear_d10">初算分度圆直径d10</string>
    <string name="gear_z1">小齿轮齿数z1</string>
    <string name="gear_z1_intro">国家标准齿轮不发生根切的最少齿数z=17</string>
    <string name="gear_z2">大齿轮齿数z2</string>
    <string name="gear_mn">确定模数(计算模数)mn</string>
    <string name="gear_a">确定中心距(计算中心距)a</string>
    <string name="gear_beta">螺旋角β(°)</string>
    <string name="gear_b1">小齿轮齿宽(计算值)b1</string>
    <string name="gear_b1_intro">b1 = b2 + (5 ~ 10)</string>
    <string name="gear_b2">大齿轮齿宽(计算值)b2</string>
    <string name="gear_d1">小齿轮分度圆直径d1</string>
    <string name="gear_da1">小齿轮齿顶圆直径da1</string>
    <string name="gear_df1">小齿轮齿根圆直径df1</string>
    <string name="gear_d2">大齿轮分度圆直径d2</string>
    <string name="gear_da2">大齿轮齿顶圆直径da2</string>
    <string name="gear_df2">大齿轮齿根圆直径df2</string>
    <string name="gear_YFS1">小齿轮复合齿形系数YFS1</string>
    <string name="gear_YFS2">大齿轮复合齿形系数YFS2</string>
    <string name="gear_sigma_F1">小齿轮齿根弯曲疲劳强度σF1</string>
    <string name="gear_sigma_F2">大齿轮齿根弯曲疲劳强度σF2</string>
    <string name="gear_sigma_H">齿面接触疲劳强度σH</string>
    <string name="gear_intro">注：应用于钢制斜齿圆柱齿轮，以下长度单位为mm，应力单位为MPa，转矩单位为N·m</string>
    <string name="key_type">平键类型</string>
    <string name="key_A">A型</string>
    <string name="key_B">B型</string>
    <string name="key_C">C型</string>
    <string name="key_d">轴的直径d</string>
    <string name="key_l">轮毂长度l</string>
    <string name="key_bh">键宽键高b×h</string>
    <string name="key_L">键长L</string>
    <string name="key_t">轴深t</string>
    <string name="key_t1">毂深t1</string>
    <string name="key_r_min">半径r最小值</string>
    <string name="key_r_max">半径r最大值</string>
    <string name="key_style">连接类型</string>
    <string name="key_soft">较松</string>
    <string name="key_normal">一般</string>
    <string name="key_hard">较紧</string>
    <string name="key_b">键宽b</string>
    <string name="key_GB">(GB/T 1095—2003 , GB/T 1096—2003)</string>
    <string name="key_GB_info">注：新标准将“轴t/毂t1”改为了“轴t1/毂t2”</string>
    <string name="key_d_info">仅支持轴径为6mm~500mm的轴=_=</string>
    <string name="key_l_info">仅支持轴长为6mm~549mm的轴=_=</string>
    <string name="key_1">轴</string>
    <string name="key_2">毂</string>
    <string name="bearing_intro">其实这个并没有什么意义，不过可以规范操作</string>
    <string name="key_intro">注：以下长度单位为mm</string>
    <string name="bearing_type">轴承内径(mm)</string>
    <string name="bearing_FR">径向力FR(N)</string>
    <string name="bearing_FA">轴向力FA(N)</string>
    <string name="bearing_D">外圆直径D(mm)</string>
    <string name="bearing_i">滚动体列数i</string>
    <string name="bearing_Cr">基本额定动载荷Cr(kN)</string>
    <string name="bearing_C0r">基本额定静载荷C0r(kN)</string>
    <string name="bearing_e">轴向载荷影响系数e</string>
    <string name="bearing_fp">冲击载荷系数fp</string>
    <string name="bearing_X">径向动载荷系数X</string>
    <string name="bearing_Y">轴向动载荷系数Y</string>
    <string name="bearing_P">当量动载荷P(N)</string>
    <string name="bearing_ft">温度系数ft</string>
    <string name="bearing_n">轴承转速n(r/min)</string>
    <string name="bearing_L">寿命L(次数)</string>
    <string name="bearing_Lh">寿命Lh(小时)</string>
    <string name="bearing_style">轴承类型</string>
    <string name="bearing_r">球轴承</string>
    <string name="bearing_l">滚子轴承</string>
    <string name="interpolation_Dimension">维数</string>
    <string name="interpolation_1">1维</string>
    <string name="interpolation_2">2维</string>
    <string name="interpolation_3">3维</string>
    <string name="interpolation_x00">原始数据x0</string>
    <string name="interpolation_y00">原始数据y0</string>
    <string name="interpolation_x01">原始数据x1</string>
    <string name="interpolation_y01">原始数据y1</string>
    <string name="interpolation_x10">原始数据x0\'</string>
    <string name="interpolation_y10">原始数据y0\'</string>
    <string name="interpolation_x11">原始数据x1\'</string>
    <string name="interpolation_y11">原始数据y1\'</string>
    <string name="interpolation_x20">原始数据x0\'\'</string>
    <string name="interpolation_y20">原始数据y0\'\'</string>
    <string name="interpolation_x21">原始数据x1\'\'</string>
    <string name="interpolation_y21">原始数据y1\'\'</string>
    <string name="interpolation_x">待求插值点x</string>
    <string name="interpolation_y">待求插值点y</string>
    <string name="integration_low">积分下限a</string>
    <string name="integration_up">积分上限b</string>
    <string name="safe_function">f(x)</string>
    <string name="safe_low">零点范围(左侧值)</string>
    <string name="safe_up">零点范围(右侧值)</string>
    <string name="safe_eq0">=0</string>
    <string name="calculation_result">计算结果</string>
    <string name="calculation_result_info">注：计算结果有效数字为8位</string>
    <string name="calculation_result_info2">注：计算结果有效数字为8位，若方程有多解，给出随机解</string>
    <string name="calculation_function">函数f(x)=</string>
    <string name="differentiation_x">待求点</string>
    <string name="differentiation_x_tooMuch">警告：该值超过10^6时，计算精度会下降</string>
    <string name="differentiation_y0">0阶导数</string>
    <string name="differentiation_y1">1阶导数</string>
    <string name="differentiation_y2">2阶导数</string>
    <string name="differentiation_y3">3阶导数</string>
    <string name="OpenSource_MDI">Material design icons</string>
    <string name="OpenSource_MDI_web">https://github.com/google/material-design-icons</string>
    <string name="OpenSource_AAS">Android Asset Studio</string>
    <string name="OpenSource_AAS_web">https://github.com/romannurik/AndroidAssetStudio</string>
    <string name="OpenSource_ASL">Android Support Library</string>
    <string name="OpenSource_ASL_web">http://developer.android.com/tools/extras/support-library.html</string>
    <string name="OpenSource_Y">Young</string>
    <string name="OpenSource_Y_web">https://www.dafont.com/young.font</string>
    <string name="OpenSource_exp4j">exp4j</string>
    <string name="OpenSource_exp4j_web">https://www.objecthunter.net/exp4j/</string>
    <string name="OpenSource_ACML">Apache Commons Mathematics Library</string>
    <string name="OpenSource_ACML_web">http://commons.apache.org/proper/commons-math/</string>
</resources>
