<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".DesignKeyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout style="@style/Main_LinearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/key_intro"
                android:textSize="14sp"/>

            <LinearLayout
                style="@style/Input_LinearLayout"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/Normal"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/key_input_d"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/key_d"
                            style="@style/Normal"
                            android:hint="@string/key_d"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/key_input_l"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/key_l"
                            style="@style/Normal"
                            android:hint="@string/key_l"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>


            <com.google.android.material.card.MaterialCardView style="@style/Output_CardView">

                <LinearLayout
                    style="@style/Normal"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/Normal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/key_bh"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/key_bh" />

                        <TextView
                            android:id="@+id/key_L"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/key_L" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Normal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/key_t"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/key_t" />

                        <TextView
                            android:id="@+id/key_t_top"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/design_top" />

                        <TextView
                            android:id="@+id/key_t_button"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/design_button" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Normal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/key_t1"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/key_t1" />

                        <TextView
                            android:id="@+id/key_t1_top"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/design_top" />

                        <TextView
                            android:id="@+id/key_t1_button"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/design_button" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Normal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/key_r_min"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/key_r_min" />

                        <TextView
                            android:id="@+id/key_r_max"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/key_r_max" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/key_style"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/key_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/key_soft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/key_soft" />

                    <RadioButton
                        android:id="@+id/key_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/key_normal" />

                    <RadioButton
                        android:id="@+id/key_hard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/key_hard" />
                </RadioGroup>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView style="@style/Output_CardView">

                <LinearLayout
                    style="@style/Normal"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/key_b"
                        style="@style/Output_TextView"
                        android:text="@string/key_b" />

                    <LinearLayout
                        style="@style/Normal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/key_b1_type"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/key_1" />

                        <TextView
                            android:id="@+id/key_b1_top"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/design_top" />

                        <TextView
                            android:id="@+id/key_b1_button"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/design_button" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Normal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/key_b2_type"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/key_2" />

                        <TextView
                            android:id="@+id/key_b2_top"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/design_top" />

                        <TextView
                            android:id="@+id/key_b2_button"
                            style="@style/Output_TextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/design_button" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                style="@style/Normal"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/key_delete"
                    style="@style/share_TextView"
                    android:drawableStart="@drawable/ic_shortcut_delete"
                    android:text="@string/app_delete" />

                <TextView
                    android:id="@+id/key_copy"
                    style="@style/share_TextView"
                    android:drawableStart="@drawable/ic_shortcut_content_copy"
                    android:text="@string/app_copy" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/key_GB" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/key_GB_info" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:src="@drawable/pic_key" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
